--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [tox]
-envlist = py27, py34, py35, py36, flake8
+envlist =
+    py35,
+;   py36,
+;   flake8
 
 [travis]
 python =
@@ -10,12 +13,12 @@ python =
 
 [testenv:flake8]
 basepython = python
-deps = flake8
+deps = pytest, flake8
 commands = flake8 kamikaze
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
+;setenv =
+;    PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
 ; If you want to make tox run the tests with the same versions, create a
@@ -24,5 +27,3 @@ deps =
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
-
-
