--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ sudo: false
 language: python
 python:
   - "3.5"
-install: pip install tox-travis
+install: pip install tox-travis biopython
 script: tox --travis-after
