--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ python:
   - "3.5"
 install: pip install tox-travis biopython
 script: tox --travis-after
+notifications:
+  email:
+    on_success: never
+    on_failure: never
